clusters/pk3s/hris/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hris
  labels:
    app.kubernetes.io/part-of: hris
