clusters/pk3s/hris/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hris
  namespace: hris
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hris.alacaba.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: hris
          port: 8080
